# Fuota-Project

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp
resources/: downloaded_file.iso  url.txt
sources/ConnectivityStack/: connectivityStack.hpp
sources/RaucManager/: CMakeLists.txt  downloader.cpp  raucManager.cpp
sources/cloud/: cloudConnector.cpp  cloudConnector.hpp  constants.hpp
sources/common/: CMakeLists.txt  IcloudConnector.hpp  IraucManager.hpp
sources/connectivityStack/: CMakeLists.txt  connectivityStack.cpp  connectivityStack.hpp
sources/downloader/: downloader.cpp  downloader.hpp
sources/raucManager/: downloader.hpp  raucManager.cpp  raucManager.hpp
